<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/date_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="42dp"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/New_Expense_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date_expense"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/new_expense"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/date_of_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date_expense"
        android:layout_below="@+id/date_expense"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/category_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date_of_expense"
        android:layout_below="@+id/date_of_expense"
        android:text="@string/category_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/description_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/category_exp"
        android:layout_below="@+id/category_exp"
        android:layout_marginTop="60dp"
        android:text="@string/description_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/type_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amount_exp"
        android:layout_below="@+id/amount_exp"
        android:layout_marginTop="61dp"
        android:text="@string/currency_type_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/descp_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amount_exp"
        android:layout_below="@+id/description_exp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/amount_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type_exp"
        android:layout_below="@+id/amount_exp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description_exp"
        android:layout_alignRight="@+id/descp_exp"
        android:layout_below="@+id/category_exp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type_exp"
        android:layout_alignRight="@+id/amount_spend"
        android:layout_below="@+id/type_exp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/submitadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_toRightOf="@+id/spinner2"
        android:text="@string/add" />

    <TextView
        android:id="@+id/amount_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description_exp"
        android:layout_below="@+id/descp_exp"
        android:layout_marginTop="15dp"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
